--- a/module/Album/view/album/album/delete.phtml
+++ b/module/Album/view/album/album/delete.phtml
@@ -8,7 +8,8 @@ $this->headTitle($title);
 
 <p>Are you sure that you want to delete
     '<?php echo $this->escapeHtml($album->title); ?>' by
-    '<?php echo $this->escapeHtml($album->artist); ?>'?
+    '<?php echo $this->escapeHtml($album->artist); ?>'
+    '(<?php echo $this->escapeHtml($album->year); ?>)'?
 </p>
 <?php
 $url = $this->url('album', array(
